<resources>
    <string name="app_name">Box.io</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="login">Login</string>
    <string name="signup">Create new Account</string>
    <string name="err_msg_email">Email not valid</string>
    <string name="err_msg_pass">Password must be at least 6 characters</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_pass_confirm">Confirm password</string>
    <string name="err_msg_pass_confirm">Passwords do not match</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="order_box">Order Box</string>
    <string name="choose_size">Choose box size</string>
    <string name="choose_color">Choose box color</string>
    <string name="enter_name">Enter your name</string>
    <string name="print_name">Print name on box</string>
    <string name="user_name">Name</string>
    <string name="your_box">Your box</string>
    <string name="last_updated">Last updated</string>
    <string name="logout">Logout</string>
    <string name="user_info">User Info</string>
</resources>
