<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.box.io.models.User" />

    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/gen_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    android:textSize="@dimen/text_size_18"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/gen_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hint_email"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.email}"
                    android:textSize="@dimen/text_size_18"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/gen_padding"
                android:visibility="@{user.hasInfo}">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_info"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{user.userInfo}"
                    android:textSize="@dimen/text_size_18"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/gen_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/last_updated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_18"
                    tools:text="@tools:sample/lorem" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/gen_padding"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/your_box"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_18" />

                <TextView
                    android:id="@+id/box_size"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="@dimen/text_size_18"
                    tools:text="@tools:sample/lorem" />

                <android.support.v7.widget.CardView
                    android:id="@+id/background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/gen_margin"
                    app:cardCornerRadius="8dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/box" />

                        <TextView
                            android:id="@+id/box_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            android:textColor="@android:color/white"
                            android:textSize="20dp"
                            android:textStyle="bold" />
                    </FrameLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <Button
                android:id="@+id/bt_logout"
                android:layout_width="@dimen/btn_width"
                android:layout_height="@dimen/btn_height"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/gen_margin"
                android:layout_marginTop="@dimen/gen_margin"
                android:background="@drawable/bt_background"
                android:text="@string/logout"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>